# tari-launchpad

./: .gitignore  .gitmodules  .license.ignore  Cargo.toml  LICENSE  README.md  build_images.sh  hosted-dual.env  lints.toml  local-performance-amd64.env  local-performance-arm64.env  package.json  rust-toolchain.toml  rustfmt.toml  tarisuite.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  build_cli.json  build_cli.yml  coverage.yml  launchpad_docker.yml  launchpad_v2.yml  release.yml  reusable-ci-jobs.yml  reusable-licenses.yml  reusable-tests.yml
backend/: Cargo.toml  package.json  tauri.conf.json
backend/assets/: config.toml  log4rs.yml
backend/src/: error.rs  main.rs
backend/src/api/: base_node_api.rs  mod.rs  wallet_api.rs
backend/src/commands/: cleanup.rs  events.rs  health_check.rs  host.rs  launch_docker.rs  mod.rs  pull_images.rs  service.rs  shutdown.rs  state.rs
backend/src/docker/: cleanup.rs  container.rs  error.rs  mod.rs  models.rs  settings.rs  workspace.rs  wrapper.rs
backend/src/grpc/: base_node_grpc_client.rs  error.rs  mod.rs  model.rs  progress.rs  wallet_grpc_client.rs
backend/src/rest/: docker_hub.rs  mod.rs  quay_io.rs  service_registry.rs
cli/: Cargo.toml
cli.orig/: Cargo.toml
cli.orig/src/: app.rs  main.rs
cli.orig/src/scenes/: mod.rs  wallet_scene.rs
cli/src/: app.rs  dashboard.rs  events.rs  lib.rs  main.rs  onboarding.rs  supervisor.rs
cli/src/component/: elements.rs  main_view.rs  mod.rs  motion.rs  tabs.rs  termination.rs
cli/src/component/expert/: mod.rs
cli/src/component/expert/containers/: mod.rs
cli/src/component/expert/errors/: mod.rs
cli/src/component/expert/logs/: mod.rs
cli/src/component/header/: logo.rs  mod.rs  mode.rs
cli/src/component/normal/: base_node.rs  chrono_button.rs  hint.rs  legend_widget.rs  mod.rs
cli/src/component/normal/base_node/: base_node.rs  container.rs  mod.rs  widget.rs
cli/src/component/normal/containers/: mod.rs
cli/src/component/normal/mining/: amount.rs  helpers.rs  merged_mining.rs  mining_panel.rs  mod.rs  session_stats.rs  status_badge.rs  tari_mining.rs
cli/src/component/normal/wallet/: balance.rs  container.rs  mod.rs  password.rs  send_funds.rs
cli/src/component/onboarding/: message.rs  mod.rs
cli/src/component/scene/: containers.rs  mod.rs  wallet.rs
cli/src/component/settings/: base_node.rs  docker.rs  logs.rs  mining.rs  mod.rs  security.rs  wallet.rs
cli/src/component/widgets/: chrono_button.rs  dialog.rs  docker_detect.rs  label.rs  labeled_input.rs  mod.rs  popup.rs  qr_code.rs  separator.rs  status_line.rs
cli/src/scenes/: containers_scene.rs
cli/src/state/: bus.rs  focus.rs  launchpad.rs  mining.rs  mod.rs  onboarding.rs
core/bus/: Cargo.toml
core/engine/: Cargo.toml
core/engine/src/: config.rs  docker.rs  lib.rs  main.rs  scope.rs  settings.rs  supervisor.rs  types.rs
core/engine/src/container/: mod.rs
core/engine/src/container/fsm/: docker.rs  events.rs  mod.rs  update.rs
core/engine/src/images/: mod.rs  tor.rs
core/engine/src/network/: mod.rs
core/engine/src/network/fsm/: docker.rs  mod.rs
core/protocol/: Cargo.toml  README.md
core/workflow/: Cargo.toml
deploy/archive/: latest.0.1.1.json
docker_rig/: config.toml  docker-compose.yml  monerod.Dockerfile  quick_start.sh  start_tari_app.sh  tarilabs.Dockerfile  tor.Dockerfile  xmrig.Dockerfile
experimental/backend/: Cargo.toml  tauri.conf.json
experimental/cli/: Cargo.toml
experimental/cli/src/: main.rs
experimental/frontend/: Cargo.toml
experimental/frontend/src/: bus.rs  lib.rs  main.rs
experimental/frontend/src/scenes/: app.rs  mod.rs
experimental/frontend/src/scenes/header/: control_buttons.rs  header_view.rs  mod.rs  top_menu.rs
experimental/frontend/src/scenes/icons/: close.rs  logo.rs  mod.rs
experimental/frontend/src/scenes/main/: main_view.rs  mod.rs
experimental/frontend/src/scenes/other/: app_header.rs  expert_view.rs  logs_view.rs  main_scene.rs  main_scene_header.rs  mod.rs  wallet_info.rs
experimental/frontend/src/states/: local_state.rs  mod.rs  remote_state.rs
experimental/frontend/src/widget/: base.rs  context.rs  mod.rs  pod.rs  subscribe.rs
experimental/frontend/styles/: app.scss
gui-react/: .gitignore  package.json
gui-react/public/: index.html
gui-react/src/: App.tsx  useCheckDockerImages.ts  useDockerEvents.ts  useWaitingWalletPassConfirm.ts  useWalletEvents.ts
libs/: README.md
libs/protocol/: Cargo.toml
libs/protocol/src/: config.rs  container.rs  errors.rs  frame.rs  images.rs  launchpad.rs  lib.rs  node.rs  session.rs  settings.rs  tari_format.rs  wallet.rs
libs/sdm/: Cargo.toml  README.md
libs/sdm-assets/: Cargo.toml
libs/sdm-assets/assets/: config.toml  log4rs-cli.yml  settings.toml
libs/sdm-assets/src/: configurator.rs  lib.rs
libs/sdm-launchpad/: Cargo.toml
libs/sdm-launchpad/assets/: config.toml
libs/sdm-launchpad/src/: api.rs  bus.rs  lib.rs  node_grpc.rs  tauri.rs  utils.rs  wallet_grpc.rs
libs/sdm-launchpad/src/resources/: config.rs  files.rs  mod.rs  networks.rs  volumes.rs
libs/sdm-launchpad/src/resources/images/: l1_tor.rs  l2_base_node.rs  l2_wallet.rs  l3_miner.rs  l5_mmproxy.rs  l5_monerod.rs  l5_xmrig.rs  l8_grafana.rs  l8_loki.rs  l8_promtail.rs  mod.rs  sync_progress.rs
libs/sdm-launchpad/tests/: common.rs  test_launch.rs  test_mining.rs
libs/sdm/src/: config.rs  error.rs  forwarder.rs  lib.rs  scope.rs  status.rs  task.rs  utils.rs
libs/sdm/src/image/: checker.rs  mod.rs
libs/sdm/src/image/task/: docker.rs  events.rs  mod.rs  update.rs
libs/sdm/src/network/: mod.rs
libs/sdm/src/network/task/: docker.rs  events.rs  mod.rs  update.rs
libs/sdm/src/volume/: mod.rs
libs/sdm/src/volume/task/: docker.rs  events.rs  mod.rs  update.rs
libs/sim-launchpad/: Cargo.toml
libs/sim-launchpad/src/: bus.rs  lib.rs  simulator.rs
libs/tact/: Cargo.toml
scripts/: install_ubuntu_dependencies.sh
ui/backend/: Cargo.toml  build.rs  tauri.conf.json
ui/backend/src/: main.rs
ui/frontend/: Cargo.toml  Trunk.toml  index.html  (+2 more)
(+405 files in other folders)
