[workspace]

members = [
    "backend",
]

[patch.crates-io]
# Temporarily lock pgp to commit (master branch at time of writing) because the currently release crate locks zeroize to =1.3
liblmdb-sys = { git = "https://github.com/tari-project/lmdb-rs", tag = "0.7.6-tari.1" }
pgp = { git = "https://github.com/tari-project/rpgp.git", rev = "32939dbe86565d5ede769a7907ec42dfdf353849" }
