[package]
name = "tari_cli_launchpad"
version = "0.1.0"
description = "Tari Launchpad (command-line)"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
edition = "2021"

[dependencies]
tari_sdm = { path = "../libs/sdm" }
tari_sdm_launchpad = { path = "../libs/sdm-launchpad" }
tari_sim_launchpad = { path = "../libs/sim-launchpad", optional = true }
tari_sdm_assets = { path = "../libs/sdm-assets" }
tari_launchpad_protocol = { path = "../libs/protocol" }

anyhow = "1.0.70"
crossterm = "0.26.1"
env_logger = "0.10.0"
log = "0.4.17"
log4rs = "1.2.0"
tokio = { version = "1.27.0", features = ["signal"] }
tui = "0.19.0"
rand = "0.8.5"
strum = "0.24.1"

[features]
default = []
sim = ["tari_sim_launchpad"]
