[package]
name = "tari_launchpad_cli"
version = "1.10.0"
edition = "2021"

[dependencies]
tari_common_types = { workspace = true}
tari_launchpad_protocol = { workspace = true}
tari_sdm = { workspace = true }
tari_sdm_assets = { workspace = true }
tari_sdm_launchpad = { workspace = true }
tari_utilities =  {workspace = true}

anyhow = "1.0.71"
async-trait = "0.1.68"
byte-unit = "5.1.3"
crossterm = "0.26.1"
derive_more = "0.99.17"
derive_setters = "0.1.0"
log = "0.4.17"
log4rs = "1.2.0"
qrcode = { version = "0.13" }
ratatui = "0.23.0"
strum = { version = "0.24.1", features = ["derive"] }
tact = { path = "../libs/tact" }
thiserror = "1.0.40"
tokio = "1.28.1"

[features]
default = []
