[package]
name = "tari-lp-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
bollard = "0.14.0"
derive_more = "0.99.17"
futures = "0.3.28"
log = "0.4.17"
serde = "1.0.173"
tact = { path = "../tact" }
thiserror = "1.0.43"
tokio = "1.28.1"
tor-hash-passwd = "1.0.1"
tracing-subscriber = "0.3.17"
