[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "Tari Launchpad Frontend"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari-launchpad"
license = "BSD-3-Clause"

[dependencies]
tari_launchpad_protocol = { path = "../../libs/protocol" }

anyhow = "1.0.64"
derive_more = "0.99.17"
futures = "0.3.24"
js-sys = "0.3.59"
log = "0.4.17"
once_cell = "1.14.0"
slab = "0.4.7"
strum = { version = "0.24.1", features = ["derive"] }
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2.0"
yew = "0.19.3"
serde_json = "1.0.85"
serde = "1.0.145"
serde-wasm-bindgen = "0.4.5"
