[package]
name = "tari_launchpad_protocol"
version = "0.1.0"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
edition = "2021"

[dependencies]
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag = "v0.4.7" }

anyhow = "1.0.65"
byte-unit = { version = "4.0.17", features = ["serde"] }
derive_more = "0.99.17"
serde = "1.0.145"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.34"
chrono = "0.4.23"
