[package]
name = "tari_launchpad_protocol"
version = "0.1.0"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
edition = "2021"

[dependencies]

byte-unit = { version = "4.0.19", features = ["serde"] }
derive_more = "0.99.17"
serde = "1"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"
chrono = { version = "0.4.26", features = ["serde"] }
serde_repr = "0.1.16"
toml = { version = "0.8.8", features = [] }
