[package]
name = "tari_launchpad_protocol"
version = "0.1.0"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
edition = "2021"

[dependencies]

minotari_node_grpc_client = { git = "https://github.com/tari-project/tari", tag = "v1.0.0-rc.2" }
tari_common_types = { git = "https://github.com/tari-project/tari", tag = "v1.0.0-rc.2" }
tari_utilities = "0.7.0"

byte-unit = { version = "5.1.3", features = ["serde"] }
derive_more = "0.99.17"
serde = "1"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"
chrono = { version = "0.4.26", features = ["serde"] }
serde_repr = "0.1.16"
toml = { version = "0.8.8", features = [] }
log = "0.4.20"
