[package]
name = "tari_sdm_assets"
version = "0.1.0"
authors = ["The Tari Development Community"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"

[dependencies]
anyhow = "1.0.68"
dirs-next = "2.0.0"
tokio = { version = "1.25.0", features = ["fs"] }
