[package]
name = "tari_sdm_launchpad"
version = "0.1.0"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
edition = "2021"

[dependencies]
minotari_app_grpc = {workspace = true }
minotari_node_grpc_client ={workspace = true }
minotari_wallet_grpc_client = {workspace = true }
tari_common_types = {workspace = true }
tari_common = {workspace = true }
tari_core = {workspace = true }
tari_key_manager ={workspace = true }
tari_launchpad_protocol = {workspace = true }
tari_sdm = {workspace = true }
tari_sdm_assets = {workspace = true }
tari_utilities = {workspace = true }

anyhow = "1.0.72"
async-trait = "0.1.72"
chrono = "0.4.31"
keyring = "2.3.3"
log = "0.4.19"
openssl-sys = { version = "0.9", features = ["vendored"] }
rand = "0.8.4"
regex = "1.9.1"
serde = "=1.0.167"
serde_json = "1.0.103"
tauri = { version = "=1.2.5", features = ["api-all", "cli", "macos-private-api"], optional = true }
thiserror = "1.0.44"
tokio = "1.29.1"
toml = "0.8.8"
tonic = { version = "0.8.3", features = ["tls"] }
tor-hash-passwd = "1.0.1"
