[package]
name = "tari_sdm"
version = "0.1.0"
description = "Software Defined Mining for the Tari Network"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
edition = "2021"

[dependencies]
tari_launchpad_protocol = { path = "../protocol" }

anyhow = "1.0.70"
async-trait = "0.1.68"
bollard = "0.14.0"
derive_more = "0.99.17"
futures = "0.3.28"
log = "0.4.17"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
chrono = "0.4.24"
