[package]
name = "tari_sdm"
version = "0.1.0"
description = "Software Defined Mining for the Tari Network"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
edition = "2021"

[dependencies]
tari_launchpad_protocol = { path = "../protocol" }

anyhow = "1.0.72"
async-trait = "0.1.72"
bollard = "0.14.0"
chrono = "0.4.26"
derive_more = "0.99.17"
futures = "0.3.28"
log = "0.4.19"
rand = "0.8.4"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
