[package]
name = "tari_bus_tauri"
version = "0.1.0"
description = "Tari Launchpad Backend"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tari_sdm_launchpad = { path = "../../libs/sdm-launchpad", features = ["tauri"] }
tari_launchpad_protocol = { path = "../../libs/protocol" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=1.2.5", features = ["api-all", "cli", "macos-private-api"] }
once_cell = "1.14.0"
tokio = { version = "1.33.0", features = ["time"] }
anyhow = "1.0.64"
log = "0.4.17"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
